# llamalot

./: .gitignore  BATCH_PROCESSING_TIMEOUT_FIX.md  CHANGELOG.md  COMPACT_LAYOUT_ENHANCEMENT.md  DESCRIPTION_WILDCARD_ENHANCEMENT.md  DEVELOPMENT.md  EMBEDDINGS_IMPLEMENTATION.md  LICENSE  PROMPTS_TAB_IMPLEMENTATION.md  README.md  SUFFIX_FUNCTIONALITY_DEMO.md  SYNC_PROMPTS_FEATURE.md  Tell me about the history of tortoises - 2025-08-12.md  example_embeddings.py  llm_prompts.json  main.py  pyproject.toml  requirements.txt  test_embeddings_setup.py  test_prompts_integration.py  test_settings_dialog.py  test_wildcard_functionality.py  test_wildcard_simple.py
.github/: copilot-instructions.md
examples/: README.md
scripts/: demo_backend.py  demo_models.py
src/llamalot/: __init__.py  main.py
src/llamalot/backend/: __init__.py  cache.py  config.py  database.py  embeddings_manager.py  exceptions.py  ollama_client.py  prompts_manager.py
src/llamalot/gui/: __init__.py  main_window.py
src/llamalot/gui/components/: __init__.py  batch_processing_panel.py  batch_processing_panel.py.backup  batch_processing_panel_fixed.py  embeddings_chat_panel.py  embeddings_panel.py  image_attachment_panel.py  selectable_image_panel.py
src/llamalot/gui/dialogs/: __init__.py  collection_manager_dialog.py  create_model_dialog.py  document_editor_dialog.py  document_import_dialog.py  image_viewer_dialog.py  model_pull_progress_dialog.py  settings_dialog.py
src/llamalot/gui/managers/: __init__.py  backend_manager.py  layout_manager.py  menu_manager.py  tab_manager.py
src/llamalot/models/: __init__.py  chat.py  config.py  ollama_model.py  prompts.py
src/llamalot/utils/: __init__.py  logging_config.py
test_images/: README.md
tests/: __init__.py  test_batch_processing.py  test_config.py  test_database.py  test_embeddings.py  test_models.py  test_ollama_client.py  test_prompts.py  test_settings_dialog.py  test_structure.py
(+10 files in other folders)
